1. android交叉编译完成了一部分(Linux)，待完成在windows下进行交叉编译并将    可执行文件推送到手机上执行。 2. 学习了一些cmake和c/c++头文件/库文件查找的知识，实现了在vim下编辑并编    译运行Qt程序和利用gtest完成单元测试并运行。 3. Docker的一些小知识

--- a/Language/C/文件组织与包含原则.md
+++ b/Language/C/文件组织与包含原则.md
@@ -5,6 +5,12 @@
 
 因此，在源文件中应仅包含必需的头文件，且尽量不要在头文件中包含其他头文件。
 
+下面两条命令可以查看 g++ 和 clang++的 include查找路径
+```
+g++ -E -x c++ - -v < /dev/null 
+clang++ -E -x c++ - -v < /dev/null
+```
+
 ![[C++常识#what is the difference between ` include <filename>` and ` include "filename"`?]]
 
 ### 头文件组织原则
