大小端概念复习；c/c++宏相关内容初步学习；遗留文章看完。

--- a/Language/C/宏的定义和使用.md
+++ b/Language/C/宏的定义和使用.md
@@ -1,1 +1,340 @@
-### 宏
+### 条件编译
+条件编译：就是预处理器根据我们**设置的条件**，对代码进行动态的处理，把**有效的代码输出到一个中间文件**，然后送给编译器进行编译。
+```C++
+#ifdef __cplusplus 
+extern "C" { 
+#endif 
+ 
+void hello();
+ 
+#ifdef __cplusplus 
+} 
+#endif 
+
+```
+
+这样的代码几乎在每个开源库中都可能见到，主要的目的就是 C 和 C++ 混合编程，具体来说就是：
+
+1. 如果使用 gcc 来编译，那么宏 `__cplusplus` 将不存在，其中的 extern "C" 将会被忽略；
+2. 如果使用 g++ 来编译，那么宏 `__cplusplus` 就存在，其中的 extern "C" 就发生作用，编译出来的函数名 hello 就不会被 g++ 编译器改写，因此就可以被 C 代码来调用；
+
+示例2：在windows平台下编写动态库时， 声明导出和导入函数。
+```c++
+#if defined(linux) || defined(__linux) || defined(__linux__)
+    #define LIBA_API 
+#else
+	#ifdef LIBA_STATIC
+		#define LIBA_API
+	#else
+	    #ifdef LIBA_API_EXPORTS
+	        #define LIBA_API __declspec(dllexport)
+	    #else
+	        #define LIBA_API __declspec(dllimport)
+	    #endif
+	#endif
+#endif
+
+LIBA_API void hello();
+```
+
+1. 在使用 MSVC 编译动态库时，需要在编译选项(Makefle 或者 CMakeLists.txt)中定义宏 LIBA_API_EXPORTS，那么导出函数 hello 的最前面的宏 LIBA_API 就会被替换成：`__declspec(dllexport)`，表示导出操作；
+2. 在编译应用程序的时候，使用动态库，需要 include 动态库的头文件，此时在编译选项中不需要定义宏 LIBA_API_EXPORTS，那么 hello 函数最前面的 LIBA_API 就会被替换成 `__declspec(dllimport)`，表示导入操作；
+3. 补充一点：**如果使用静态库，编译选项中不需要任何宏定义，那么宏 LIBA_API 就为空。**
+
+#### 平台预定义的宏
+目标平台会为我们预先定义好一些宏，方便我们在程序中使用。除了上面的操作系统相关宏，还有另一类宏定义，在日志系统中被广泛的使用：
+```
+FILE：当前源代码文件名；
+LINE：当前源代码的行号；
+FUNCTION：当前执行的函数名；
+DATE： 编译日期；
+TIME： 编译时间；
+```
+
+```C++
+printf("file name: %s, function name = %s, current line:%d \n", __FILE__, __FUNCTION__, __LINE__);
+```
+
+### 宏扩展
+---
+宏扩展最大的好处有如下几点：
+1. 减少重复代码
+2. 完成一些通过C语法无法实现的功能（字符串拼接）
+3. 动态定义数据类型， 类似C++中模板的功能
+4. 程序更容易理解，修改（常数，字符串）
+e.g.
+1. 计算数组中元素个数
+```C
+#define ARRAY_SIZE(x)    (sizeof(x) / sizeof((x)[0]))
+```
+2. 获取最大最小值
+```C
+#define MAX(a, b)    (((a) > (b)) ? (a) : (b))
+#define MIN(a, b)    (((a) < (b)) ? (a) : (b))
+```
+3. 位操作
+```c
+#define BIT_MASK(x)         (1 << (x))
+#define BIT_GET(x, y)       (((x) >> (y)) & 0x01u)
+#define BIT_SET(x, y)       ((x) | (1 << (y)))
+#define BIT_CLR(x, y)       ((x) & (~(1 << (y))))
+#define BIT_INVERT(x, y)    ((x) ^ (1 << (y)))
+```
+
+#### 宏的优点
+1. 不需要检查参数，更灵活的传参；（比如不同类型数的比较）
+2. 直接对宏进行代码扩展，执行时不需要函数调用；
+3. 如果同一个宏在多处调用，会增加代码体积；
+以上前两点都是对比函数的
+
+还有比较高级一点的应用, 利用宏的类型无关，动态生成结构体:
+```C
+#define VEC(T)          \
+    struct vector_##T { \
+        T *data;       \
+        size_t size;    \
+    };
+
+int main()
+{
+    VEC(int)   vec_1 = { .data = NULL, .size = 0 };
+    VEC(float) vec_2 = { .data = NULL, .size = 0 };
+}
+```
+
+#### 带参数的宏
+可以定义具有形式参数（简称“形参”）的宏。当预处理器展开这类宏时，它先使用调用宏时指定的实际参数（简称“实参”）取代替换文本中对应的形参。带有形参的宏通常也称为类函数宏（function-like macro）。
+```C
+#define 宏名称( [形参列表] ) 替换文本
+#define 宏名称( [形参列表 ,] ... ) 替换文本
+```
+
+**“形参列表”是用逗号隔开的多个标识符，它们都作为宏的形参。当使用这类宏时，实参列表中的实参数量必须与宏定义中的形参数量一样多**（然而，C99 允许使用“空实参”，下面会进一步解释）。**这里的省略号意味着一个或更多的额外形参。**
+
+当定义一个宏时，**必须确保宏名称与左括号之间没有空白符。如果在名称后面有任何空白，那么命令就会把宏作为没有参数的宏**，且从左括号开始采用替换文本。
+
+C99 允许在调用宏的时候，宏的实参列表可以为空。在这种情况下，对应的替换文本中的形参不会被取代；也就是说，替换文本会删除该形参。然而，并非所有的编译器都支持这种“空实参”的做法。
+
+
+
+#### 符号：`#` 与 `##`
+这两个符号在编程中的作用也是非常巧妙，夸张的说一句：在任何框架性代码中，都能见到它们的身影！
+
+作用如下：
+1. 把参数转换成字符串
+2. 连接参数
+
+##### 字符串化
+```C
+#define STR(x) #x
+printf("string of 123: %s \n", STR(123));
+
+// 传入一个数字123， 输出的结果是字符串 “123”
+```
+
+##### 参数连接
+把宏中的参数按照字符进行拼接，从而得到一个新的标识符
+```C
+#define MAKE_VAR(name, no) name##no
+
+int main(void)
+{
+    int MAKE_VAR(a, 1) = 1; 
+    int MAKE_VAR(b, 2) = 2; 
+
+    printf("a1 = %d \n", a1);
+    printf("b2 = %d \n", b2);
+    return 0;
+}
+```
+
+#### 可变参数的处理
+##### 参数名的定义和使用
+宏定义的参数个数可以是不确定的，就像调用 printf 打印函数一样，在定义的时候，可以使用三个点(...)来表示可变参数，也可以在三个点的前面加上可变参数的名称。
+
+如果使用三个点(...)来接收可变参数，那么在使用的时候就需要使用 VA_ARGS 来表示可变参数
+```C
+#define debug1(...)      printf(__VA_ARGS__)
+
+debug1("this is debug1: %d \n", 1);
+```
+
+如果在三个点(...)的前面加上了一个参数名，那么在使用时就一定要使用这个参数名，而不能使用 VA_ARGS 来表示可变参数
+```C
+#define debug2(args...)  printf(args)
+
+debug1("this is debug2: %d \n", 2);
+```
+
+##### 可变参数个数为0的处理
+```C
+#define debug3(format, ...)      printf(format, __VA_ARGS__)
+
+debug3("this is debug4: %d \n", 4);
+```
+
+编译执行都没有问题，但是如果这样使用宏：
+```C
+debug3("hello \n");
+```
+
+编译会出现错误。这是因为宏扩展后的代码（`__VA_ARGS__`为空）:
+```C
+printf("hello \n", );
+```
+
+在格式化字符串的后面多了一个逗号！为了解决问题，预处理器给我们提供了一个方法：**通过 ## 符号把这个多余的逗号给自动删掉**。于是宏定义改成下面这样就没有问题了。
+```C
+#define debug3(format, ...)     printf(format, ##__VA_ARGS__)
+```
+
+类似的，如果自己定义了可变参数的名字，也在前面加上 ##，如下：
+```C
+#define debug4(format, args...)  printf(format, ##args)
+```
+
+#### 在宏内使用宏
+在替换实参，以及执行完 # 和 ## 运算之后，预处理器会检查操作所得的替换文本，并展开其中包含的所有宏。但是，**宏不可以递归地展开**：如果预处理器在 A 宏的替换文本中又遇到了 A 宏的名称，或者从嵌套在 A 宏内的 B 宏内又遇到了 A 宏的名称，那么 A 宏的名称就会无法展开。
+
+#### 宏的作用域和重新定义
+无法再次使用 `#define` 命令重新定义一个已经被定义为宏的标识符，除非重新定义所使用的替换文本与已经被定义的替换文本完全相同。如果该宏具有形参，重新定义的形参名称也必须与已定义形参名称的一样。
+
+如果想改变一个宏的内容，必须首先使用下面的命令取消现在的定义：
+```c
+#undef 宏名称
+```
+
+
+
+#### 奇思妙想的宏
+宏扩展的本质就是文本替换，但是一旦加上可变参数(`__VA_ARGS__`)和 ## 的连接功能，就能够变化出无穷的想象力。
+
+##### 日志功能
+添加日志功能最普遍的用法
+```C
+#ifdef DEBUG
+    #define LOG(...) printf(__VA_ARGS__)
+#else
+    #define LOG(...) 
+#endif
+
+int main()
+{
+    LOG("name = %s, age = %d \n", "zhangsan", 20);
+    return 0;
+}
+```
+
+##### 利用宏来迭代每个参数
+```C
+#define first(x, ...) #x
+#define rest(x, ...)  #__VA_ARGS__
+
+#define destructive(...)                              \
+    do {                                              \
+        printf("first is: %s\n", first(__VA_ARGS__)); \
+        printf("rest are: %s\n", rest(__VA_ARGS__));  \
+    } while (0)
+
+int main(void)
+{
+    destructive(1, 2, 3);
+    return 0;
+}
+
+```
+
+主要的思想就是：每次把可变参数 VA_ARGS 中的第一个参数给分离出来，然后把后面的参数再递归处理，这样就可以分离出每一个参数了。我记得侯杰老师在 C++ 的视屏中，利用可变参数模板这个语法，也实现了类似的功能。
+
+##### 动态调用不同的函数
+```C
+// 普通的枚举类型
+enum {
+  ERR_One,
+  ERR_Two,
+  ERR_Three
+};
+
+// 利用 ## 的拼接功能，动态产生 case 中的比较值，以及函数名。
+#define TEST(no) \
+    case ERR_##no: \
+      Func_##no(); \
+      break;
+
+void Func_One()
+{
+    printf("this is Func_One \n");
+}
+
+void Func_Two()
+{
+    printf("this is Func_Two \n");
+}
+
+void Func_Three()
+{
+    printf("this is Func_Three \n");
+}
+
+int main()
+{
+    int c = ERR_Two;
+    switch (c) {
+        TEST(One);
+        TEST(Two);
+        TEST(Three);
+    };
+
+    return 0;
+}
+
+```
+
+##### 动态创建错误编码与对应的错误字符串
+```C
+#define MY_ERRORS     \
+    E(TOO_SMALL)      \
+    E(TOO_BIG)        \
+    E(INVALID_VARS)
+
+#define E(e) Error_## e,
+typedef enum {
+    MY_ERRORS
+} MyEnums;
+#undef E
+
+#define E(e) #e,
+const char *ErrorStrings[] = {
+    MY_ERRORS
+};
+#undef E
+
+int main()
+{
+    printf("%d - %s \n", Error_TOO_SMALL, ErrorStrings[0]);
+    printf("%d - %s \n", Error_TOO_BIG, ErrorStrings[1]);
+    printf("%d - %s \n", Error_INVALID_VARS, ErrorStrings[2]);
+
+    return 0;
+}
+
+```
+
+把宏展开后，得到一个枚举类型和一个字符串常量数组
+```C
+typedef enum {
+    Error_TOO_SMALL,
+    Error_TOO_BIG,
+    Error_INVALID_VARS,
+} MyEnums;
+
+const char *ErrorStrings[] = {
+    "TOO_SMALL",
+    "TOO_BIG",
+    "INVALID_VARS",
+};
+
+```
+
+#### 参考文章
+[C语言宏的定义和宏的使用方法（#define）](http://c.biancheng.net/view/446.html)
