--- a/编程基本概念/大小端.md
+++ b/编程基本概念/大小端.md
@@ -32,5 +32,23 @@ Little-Endian: 低地址存放低位，如下：
 
 ![[Pasted image 20230311033315.png]]
 
+大字节序就是“**高字节存入低地址，低字节存入高地址**”。
+
+这里讲个词源典故：“endian”一词来源于乔纳森·斯威夫特的小说《格列佛游记》。小说中，小人国为水煮蛋该从大的一端(Big-End)剥开还是小的一端(Little-End)剥开而争论，争论的双方分别被称为Big-endians和Little-endians。
+
+- 最高有效位  MSB, Most Significant Byte
+- 最低有效位  LSB，Least Significant Byte
+
+#### 网络序
+网络传输一般采用大字节序，也称为网络字节序或网络序。IP协议中定义大字节序为网络字节序。
+
+对于可移植的代码来说，将接收的网络数据转换成主机的字节序是必须的，一般会有成对的函数用于把网络数据转换成相应的主机字节序或反之(若主机字节序与网络字节序相同，通常将函数定义为空宏)。
+
+#### 处理器字节序
+不同处理器体系的字节序如下所示：
+- X86、MOS Technology 6502、Z80、VAX、PDP-11等处理器为Little endian；
+- Motorola 6800、Motorola 68000、PowerPC 970、System/370、SPARC(除V9外)等处理器为Big endian；
+- ARM、PowerPC (除PowerPC 970外)、DEC Alpha，SPARC V9，MIPS，PA-RISC and IA64等的字节序是可配置的。
+
 ### 大小端和什么有关？
 编程语言和大小端没有关系，影响大小端的是 `编译器`/ `CPU`
