新增图片演示回滚

--- a/工具/Git/分离指针操作.md
+++ b/工具/Git/分离指针操作.md
@@ -16,6 +16,9 @@ git branch -f master HEAD~4
 git branch -f master 95d2bb5823033b8d53c15ff2e2c023275102e8ca
 ```
 
+这样可以实现下面的功能， HEAD和master指针落后最新提交，相当于回滚操作。
+![[behindCommit.png]]
+
 👉TMD, 注意第一次游离HEAD指针使用 checkout, 后面切换master指针的指向时应该使用 branch
 
 一下午都看错了，浪费俩三小时。
