学习git reset命令的使用

--- a/工具/Git/分离指针操作.md
+++ b/工具/Git/分离指针操作.md
@@ -22,3 +22,9 @@ git branch -f master 95d2bb5823033b8d53c15ff2e2c023275102e8ca
 👉TMD, 注意第一次游离HEAD指针使用 checkout, 后面切换master指针的指向时应该使用 branch
 
 一下午都看错了，浪费俩三小时。
+
+### 额外发现  git reset
+现在发现 git reset就可以达到回滚的操作，还简单
+```
+git reset ${hash}
+```
