--- a/Language/C++/语言基础/左值与右值.md
+++ b/Language/C++/语言基础/左值与右值.md
@@ -1,4 +1,8 @@
 ### 左值和右值的概念
+左值的英文简写为“lvalue”，右值的英文简写为“rvalue”。很多人认为它们分别是"left value"、"right value" 的缩写，其实不然。lvalue 是“loactor value”的缩写，可意为存储在内存中、有明确存储地址（可寻址）的数据，而 rvalue 译为 "read value"，指的是那些可以提供数据值的数据（不一定可以寻址，例如存储于寄存器中的数据）。
+
+右值可以看作程序运行中的临时结果，右值引用可以避免复制提高效率。
+
 左值与右值这两个概念是从C中传承而来的。
 ~~- 左值是指既能够出现在等号左边，又能够出现在等号右边的变量。··
 ~- 右值是指只能出现在等号右边的变量~~
