--- a/遗失的课程/元编程.md
+++ b/遗失的课程/元编程.md
@@ -1,1 +1,15 @@
-# 什么是元编程
+### 什么是元编程
+---
+遗失的课程中的元编程更多的是方便编程的工具的使用像 Makefile这些。
+
+**Metaprogramming** is a programming technique in which computer programs have the ability to **treat other programs as their data**. 
+
+It means that a program can be designed to **read, generate, analyze or transform other programs**, and even modify itself while running.
+
+优点：
+1. In some cases, this allows programmers to **minimize the number of lines of code to express a solution**, in turn reducing development time
+
+2. It also allows programs a **greater flexibility to efficiently** handle new situations without recompilation.
+
+Metaprogramming can be used to **move computations from run-time to compile-time**, to generate code using compile time computations, and to enable self-modifying code. 
+
