--- a/Language/C++/语言基础/命名空间.md
+++ b/Language/C++/语言基础/命名空间.md
@@ -5,13 +5,37 @@ namespace Name{
 
 }
 ```
-命名空间可以解决命名冲突的问题。
+命名空间提供了一种在大项目中避免名字冲突的方法。
 
-如果 命名空间是全局的，那么 命名空间内的变量也是全局变量
+命名空间内的变量仍然需要遵守作用域规则，它们只在命名空间内部可见。如果在命名空间内部定义了同名的变量，在命名空间外部访问时，需要使用**命名空间限定符**来明确指定访问的是命名空间内的变量还是全局命名空间的变量。
 
 命名空间和非命名空间中相同命名的结构体，变量，函数等不会发生冲突（重定义）
 
 💡 :: 叫做作用域限定符
+
+### 语法
+---
+1.  namespace 命名空间名 { 声明序列 } 
+	1) 命名空间 命名空间名 的具名命名空间定义。
+ 
+2.  inline namespace 命名空间名 { 声明序列 }  C++11 起
+	2) 命名空间 命名空间名 的内联命名空间定义。命名空间名 内的声明将**在它的外围命名空间可见。**
+ 
+3.  namespace { 声明序列 } 
+	3) 无名命名空间定义。它的成员具有**从声明点到翻译单元结尾的潜在作用域，并具有内部连接。**
+ 
+4.  命名空间名 :: 成员名
+	4) 命名空间名（还有类名）可以出现在作用域解析运算符的左侧，作为有限定的名字查找的一部分。
+ 
+5.  using namespace 命名空间名 ; 
+	5) using 指令：从 using 指令之后到指令出现的作用域结尾为止，以对任何名字的无限定名字查找的视点来说，来自 命名空间名 的**任何名字均可见**，如同它在同时含有该 using 指令和 命名空间名 两者的最接近外围命名空间作用域声明一样。
+ 
+6.  using 命名空间名 :: 成员名 ; 
+	6) using 声明：令来自命名空间 命名空间名 的符号 成员名 对无限定名字查找可见，如同将它在包含该 using 声明的相同的类作用域、块作用域或命名空间之中声明一样。
+ 
+7.  namespace 名字 = 有限定命名空间 ; 
+	7) 命名空间别名定义（namespace-alias-definition）：**令 名字 成为另一命名空间的同义词**
+
 
 ### 命名空间的内容
 ---
@@ -60,8 +84,19 @@ namespace _UNIQUE_NAME {
 using namespace _UNIQUE_NAME;
 ```
 
+|   |   |
+|---|---|
+|虽然无名命名空间中的名字可以声明为具有外部连接，但从其他翻译单元无法访问它们，因为它的命名空间名是独有的。|(C++11 前)|
+|无名命名空间以及所有直接或间接在无名命名空间内声明的命名空间都具有[内部连接](https://zh.cppreference.com/w/cpp/language/storage_duration#.E8.BF.9E.E6.8E.A5 "cpp/language/storage duration")，这表示**在无名命名空间内声明的所有名字都具有内部连接**。|(C++11 起)|
+
+
 ### 使用命名空间中成员的方式
 ---
+#### using 声明
+using 声明可以用来**将命名空间的成员引入到其他命名空间和块作用域中**，或将基类的成员引入到派生类定义中，或将[枚举项](https://zh.cppreference.com/w/cpp/language/enum "cpp/language/enum")引入命名空间、块或类作用域中
+
+
+
 #### 命名空间展开
 ```cpp
 using namespace Name;
@@ -97,3 +132,7 @@ Example:
 ```
 You may not use a using-directive to make all names from a namespace available.
 ```
+
+### 参考
+---
+[命名空间 - cppreference.com](https://zh.cppreference.com/w/cpp/language/namespace)
