--- a/Language/C++/语言基础/存储类说明符.md
+++ b/Language/C++/语言基础/存储类说明符.md
@@ -88,10 +88,11 @@
 
 如果初始化递归地进入正在初始化的变量的块，那么行为未定义。 
 
-如果多个线程试图同时初始化同一静态局部变量，那么**初始化严格发生一次**（类似的行为也可对任意函数以 [std::call_once](https://zh.cppreference.com/w/cpp/thread/call_once "cpp/thread/call once") 来达成）。
+如果多个线程试图同时初始化同一静态局部变量，那么**初始化严格发生一次**（类似的行为也可对任意函数以 [std::call_once](https://zh.cppreference.com/w/cpp/thread/call_once "cpp/thread/call once") 来达成）(初始化是线程安全的， 写操作不是)。
 
 块作用域静态变量的析构函数在初始化已成功的情况下[在程序退出时](https://zh.cppreference.com/w/cpp/utility/program/exit "cpp/utility/program/exit")被调用。
 
+[Site Unreachable](https://www.cnblogs.com/MinPage/p/14613364.html)
 ### 注意
 ---
 位于顶层命名空间作用域（C 中的文件作用域），且是 const 而非 extern 的名字在 **C 中具有外部链接**，但在 C++ 中具有内部链接。
