C++语言基础学习

--- a/Language/C++/语言基础/存储类说明符.md
+++ b/Language/C++/语言基础/存储类说明符.md
@@ -37,11 +37,11 @@
 指代**对象、引用、函数、类型、模板、命名空间或值的名字**，可具有链接。如果某个名字具有链接，那么它所指代的实体与另一作用域中的声明所引入的相同名字指代相同的实体。如果有变量、函数或其他实体在数个作用域声明但没有足够的链接，那么就会生成该实体的多个实例。 
 
 #### 无链接
-名字**只能从它所在的作用域使用**。 在块作用域声明的下列任何名字均无链接：
-
+名字**只能从它所在的作用域使用**。 在**块作用域**声明的下列任何名字均无链接：
+❗注意前提： 在块作用域内。
 - 未显式声明为 extern 的变量（不管有没有 static 修饰符）；
 - 局部类和它的成员函数；
-- 在块作用域声明的其他名字，例如 typedef、枚举及枚举项。 
+- 在块作用域声明的其他名字，例如 **typedef、枚举及枚举项**。 
 
 未指定为拥有外部、模块 (C++20 起)或内部链接的名字同样无链接，这与它的声明所处的作用域无关。 
 
@@ -59,9 +59,9 @@
 另外，**所有在无名命名空间或无名命名空间内**的命名空间中声明的名字，即使显式声明为 extern 也均拥有内部链接。(C++11 起)
 
 #### 外部链接
-名字能从其他翻译单元中的作用域使用。具有外部链接的变量和函数也具有[语言链接](https://zh.cppreference.com/w/cpp/language/language_linkage "cpp/language/language linkage")，这使得以不同编程语言编写的翻译单元可以互相链接。 在命名空间作用域声明的下列任何名字均具有外部链接，除非这些名字在无名命名空间内声明或它们在具名模块声明且未被导出 (C++20 起)：
+**名字能从其他翻译单元中的作用域使用**。具有外部链接的变量和函数也具有[语言链接](https://zh.cppreference.com/w/cpp/language/language_linkage "cpp/language/language linkage")，这使得以不同编程语言编写的翻译单元可以互相链接。 在命名空间作用域声明的下列任何名字均具有外部链接，除非这些名字在无名命名空间内声明或它们在具名模块声明且未被导出 (C++20 起)：
 
-- 未声明为 static 的函数、命名空间作用域内未声明为 static 的非 const 变量，和所有声明为 extern 的变量
+- 未声明为 static 的函数、命名空间作用域内未声明为 static 的非 const 变量，和**所有声明为 extern 的变量（即使是const 变量）**
 
 - 枚举
 
