--- a/Language/C++/装载-链接-库文件/动态链接与静态链接.md
+++ b/Language/C++/装载-链接-库文件/动态链接与静态链接.md
@@ -141,13 +141,13 @@ funcb.cc.o:
 
 可以看到，合并后的静态库中保留了两个同名的func.cc.o中各自的函数符号。所以，这个问题的答案就是：同名的.o文件不会被直接覆盖，可以放心使用ar来合成静态库。
 
-### **0x07 问题5：**编译动态库可以链接静态库，编译静态库也可以链接静态库，那它们有区别吗？
+### 0x07 问题5：编译动态库可以链接静态库，编译静态库也可以链接静态库，那它们有区别吗？
 
 首先，给出答案：**有区别**！在问题1和问题2的基础上，我们可以很好地理解这个问题。区别是：
 
-**动态库链接静态库：**是**“有效”**的链接，在编译动态库时，虽然ld链接器没有执行真正的重定向，但是它还是执行了“链接”过程中的其他步骤，如相似段合并、地址分配等。而编译一个动态库时，去链接一个静态库，比如编译libA.so链接了libB.a，那么libB.a中的.o文件会被ld链接器遍历查找，把其中libA.so所必须用到的部分.o加入到相似段合并的过程中。
+**动态库链接静态库**：是“有效”的链接，在编译动态库时，虽然ld链接器没有执行真正的重定向，但是它还是执行了“链接”过程中的其他步骤，如相似段合并、地址分配等。而编译一个动态库时，去链接一个静态库，比如编译libA.so链接了libB.a，那么libB.a中的.o文件会被ld链接器遍历查找，把其中libA.so所必须用到的部分.o加入到相似段合并的过程中。
 
-**静态库链接静态库：**是**"虚假"**的链接。是的，这个所谓的链接就是假的，你又被骗了！用了这么久的gcc和cmake，没想到它们竟然是个糟老头子~ 根据问题1和问题2的分析，编译一个静态库根本就不会发生链接。你可能以为，你在编译一个libA.a，并且它链接了libB.a，在生成libA.a的时候，ld链接器会负责任地为你检查libA.a和libB.a中的符号依赖，于是你信心十足地写下了这段cmake代码。
+**静态库链接静态库**：是"虚假"的链接。是的，这个所谓的链接就是假的，你又被骗了！用了这么久的gcc和cmake，没想到它们竟然是个糟老头子~ 根据问题1和问题2的分析，编译一个静态库根本就不会发生链接。你可能以为，你在编译一个libA.a，并且它链接了libB.a，在生成libA.a的时候，ld链接器会负责任地为你检查libA.a和libB.a中的符号依赖，于是你信心十足地写下了这段cmake代码。
 
 ```cmake
 add_library(A STATIC ${LIB_A_SRCS}) # 编译静态库
