grpc接口使用；wsl vim 输入法切换；如何正确设计 智能指针参数传递；理解 git diff 输出； copilot 付费失败的解决方法

--- a/OS/进程内存保护.md
+++ b/OS/进程内存保护.md
@@ -114,6 +114,7 @@ anymapper网址: ([GitHub - kkent030315/anymapper: x64 Windows kernel driver map
 下面的文章详细讲述了拦截 OpenProcess 调用的实现原理：
 [Termination and Injection Self Defense on Windows >= Vista SP1](https://www.evilsocket.net/2014/02/05/Termination-and-injection-self-defense-on-Windows-Vista-SP1/)
 
+[ObRegisterCallbacks的运用-CSDN博客](https://blog.csdn.net/sanqiuai/article/details/119416475)
 ###### 实现
 下面的 github 实现了上面的原理， 可以直接 clone 下来编译运行。
 [GitHub - SweetIceLolly/Kernel\_Mode\_Process\_Protection: My first kernel-mode process protection driver!](https://github.com/SweetIceLolly/Kernel_Mode_Process_Protection)
