--- a/编程基本概念/同步与异步.md
+++ b/编程基本概念/同步与异步.md
@@ -15,3 +15,11 @@ While these operations are being performed, the CPU is not actively processing t
 
 In summary, asynchronous programming is a technique that allows your code to continue executing while waiting for non-CPU-bound operations, such as I/O or network requests, to complete. This can help improve the responsiveness and performance of your code.
 
+
+[zhihu.com/question/19732473](https://www.zhihu.com/question/19732473)
+
+[blog.51cto.com/yaocoder/1308899](https://blog.51cto.com/yaocoder/1308899)
+
+posix.1严格定义的[异步IO](https://www.zhihu.com/search?q=%E5%BC%82%E6%AD%A5IO&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A14413599%7D)是要求没有任何一点阻塞，而上述的前面四个（阻塞IO，非阻塞IO，IO复用，信号驱动）都不同程度阻塞了，而且都有一个共同的阻塞： 内核拷贝数据到进程空间的这段时间需要等待。
+
+对unix来讲：阻塞式I/O(默认)，非阻塞式I/O(nonblock)，I/O复用(select/poll/epoll)都属于同步I/O，因为它们在数据由内核空间复制回进程缓冲区时都是阻塞的(不能干别的事)。只有异步I/O模型(AIO)是符合异步I/O操作的含义的，即在1数据准备完成、2由内核空间拷贝回缓冲区后 通知进程，在等待通知的这段时间里可以干别的事。
