一些 cpp 基础知识与技巧

--- a/设计模式/C++实现/单例模式.md
+++ b/设计模式/C++实现/单例模式.md
@@ -1,3 +1,51 @@
+```cpp
+template <typename T>
+struct Singleton {
+    Singleton() = default;
+    ~Singleton() = default;
+
+    // Delete the copy and move constructors
+    Singleton(const Singleton &) = delete;
+    Singleton &operator=(const Singleton &) = delete;
+    Singleton(Singleton &&) = delete;
+    Singleton &operator=(Singleton &&) = delete;
+
+    static T &get() {
+        static T instance{};
+        return instance;
+    }
+};
+
+//  通过 CRTP 通用化单例模板
+struct A : Singleton<A> {
+    int id;
+    std::string name;
+    A() {
+        id = 114;
+        name = "514";
+    }
+};
+struct B : Singleton<B> {
+    std::vector<int> vec;
+    B() {
+        vec = {1, 2, 3, 4};
+    }
+};
+
+int main() {
+    auto &a = A::get();
+    auto &b = B::get();
+
+    auto f = []() {
+        auto &env = A::get();
+        std::cout << env.id << " " << env.name << "\n";
+    };
+    f();
+
+    std::cout << b.vec[1] << " " << b.vec[3] << "\n";
+}
+```
+
 饿汉式（Eager Singleton）（线程安全，但是存在潜在风险）
 懒汉式（Lazy Singleton）（需要枷锁保证线程安全）
 Meyers' Singleton （线程不安全，最优雅）
